LBSD-2202 fix: adjusting icon alignment in settings

--- a/client/app/styles/sass/liveblog.scss
+++ b/client/app/styles/sass/liveblog.scss
@@ -95,9 +95,16 @@
 }
 
 .button-stack .navbtn {
+	text-decoration: none;
+
 	&.analytics-link,
 	&.settings-link {
 		i { position: relative; top: 10px; }
+	}
+
+	.big-icon--analytics,
+	.big-icon--cog {
+		position: relative; top: 10px;
 	}
 }
 
